--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.1.4-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>Basic parent pom for maven build configuration</name>
+    <name>sndp-public-base-parent</name>
     <description>Parent pom in order to inherit basic configuration for the public projects</description>
 
     <url>https://serendipity-projects.github.io/${project.artifactId}</url>
@@ -81,8 +81,8 @@
 
     <properties>
 
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
