--- a/pom.xml
+++ b/pom.xml
@@ -90,10 +90,10 @@
         <doxia.version>2.0.0</doxia.version>
 
         <scm.version>2.1.0</scm.version>
-        <junit.version>5.11.3</junit.version>
-        <log4j.version>2.24.1</log4j.version>
+        <junit.version>5.13.0-M2</junit.version>
+        <log4j.version>2.24.3</log4j.version>
 
-        <javadoc.plugin.version>3.10.1</javadoc.plugin.version>
+        <javadoc.plugin.version>3.11.2</javadoc.plugin.version>
 
         <!-- SITE properties -->
         <site.input.directory>${project.reporting.outputDirectory}</site.input.directory>
@@ -119,7 +119,7 @@
             <dependency>
                 <groupId>nl.jqno.equalsverifier</groupId>
                 <artifactId>equalsverifier</artifactId>
-                <version>3.17.1</version>
+                <version>3.19.2</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
@@ -160,7 +160,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.26.3</version>
+            <version>4.0.0-M1</version>
             <scope>test</scope>
         </dependency>
 
@@ -263,7 +263,7 @@
             <!-- -->
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <version>3.1.3</version>
+                <version>3.1.4</version>
                 <executions>
                     <execution>
                         <id>skip-default-deploy</id>
@@ -304,7 +304,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>4.0.0-M14</version>
+                <version>4.0.0-M16</version>
                 <executions>
                     <execution>
                         <id>attach-descriptor</id>
@@ -370,19 +370,19 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.9.0</version>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.5.3</version>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.5.3</version>
                 <configuration>
                     <skip>${skip.failsafe.tests}</skip>
                 </configuration>
@@ -399,7 +399,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.12</version>
+                <version>0.8.13</version>
                 <configuration>
                     <excludes>
                         <exclude>it/serendigity/**/HelpMojo.*</exclude>
@@ -545,7 +545,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.5.3</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -562,7 +562,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.12</version>
+                <version>0.8.13</version>
                 <configuration>
                     <excludes>
                         <exclude>it/serendigity/**/HelpMojo.*</exclude>
@@ -614,7 +614,7 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.8.6.5</version>
+                <version>4.9.3.0</version>
             </plugin>
 
         </plugins>
