--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,15 @@ jobs:
 
     steps:
       # JDK
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          java-version: 1.17
+          distribution: 'temurin' 
+          java-version: '17'
       # Cache
       - name: Cache maven deps
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         env:
           cache-name: cache-maven-deps
         with:
