--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: '17'
       # Cache
       - name: Cache maven deps
-        uses: actions/setup-java@v4
+        uses: actions/cache@v4
         env:
           cache-name: cache-maven-deps
         with:
